[package]
name = "magic-loc-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2.*"
heapless = { version = "0.7.14", default-features = false }
dw3000-ng = { package = "dw3000-ng", git = "https://github.com/ProfFan/dw3000", rev = "1bfbcf819a8fc3966a932276d83ddeddf13c31c3" }
array-init = "2.1.0"
bilge = { package = "bilge", git = "https://github.com/hecatia-elegua/bilge" }
defmt = "0.3"
arbitrary-int = "1.2.6"
zerocopy = "0.X"
zerocopy-derive = "0.X"
