[package]
name = "magic-loc-protocol"
version = "0.2.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2.*"
heapless = { version = "^0.8.0", default-features = false }
dw3000-ng = "0.4.0"
array-init = "2.1.0"
bilge = { package = "bilge", git = "https://github.com/hecatia-elegua/bilge" }
defmt = "0.3"
arbitrary-int = "1.2.6"
zerocopy = "0.X"
zerocopy-derive = "0.X"
