[package]
name = "magic-loc-protocol"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
embedded-hal = "1.0.0"
heapless = { version = "0", default-features = false }
dw3000-ng = "1.0"
array-init = "2.1"
bilge = { package = "bilge", git = "https://github.com/hecatia-elegua/bilge" }
defmt = "0.3"
arbitrary-int = "1.2.6"
zerocopy = "0.7"
zerocopy-derive = "0.7"
